# pauzee_taln23

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
code/: cli.py  trainer.py
code/baseline/: baseline_syllabs.py
code/evaluation/: evaluation.py
code/formatDataset/: formatCorpus.py
code/models/: data_module.py  punct_predictor.py  ser_metric.py
