[tool.poetry]
name = "breath_prediction"
version = "0.1.0"
description = ""
authors = ["Deezer Research <<research@deezer.com>"]
packages = [
    { include = "breath_prediction" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
pytorch-lightning = "1.7.0"
pytorch-nlp = "^0.5.0"
pandas = "1.2.2"
optuna = "^2.10.1"
click = "^8.1.3"
types-PyYAML = "^6.0.11"
tqdm = "^4.64.0"
transformers = "^4.21.1"
tensorboard = "^2.12.0"
torchmetrics = "0.9.3"
torch = "1.12.0"
scikit-learn = "1.1.2"
matplotlib = "3.6.0"
seaborn = "0.12.2"


[tool.poetry.group.dev.dependencies]
#black = "*"
#isort = "*"
#pyflakes = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.isort]
#profile = "black"
#multi_line_output = 3

#[tool.pytest.ini_options]
#addopts = "--cov-report xml:coverage.xml --cov=. --junitxml=xunit.xml"
#junit_family = "xunit2"
